--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -19,9 +19,7 @@
   padding: 0;
 }
 
-#root {
-  background-color: $mainColor;
-}
+
 
 a {
   text-decoration: none;
